--- a/package.json
+++ b/package.json
@@ -66,17 +66,27 @@
     "ubuntu-fontface": "^0.1.13"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-eslint": "^8.2.1",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-es2015-classes": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "electron-forge": "^5.0.0",
     "electron-prebuilt-compile": "1.7.11",
-    "eslint": "^3",
+    "eslint": "^4.16.0",
     "eslint-config-airbnb": "^15",
+    "eslint-plugin-compat": "^2.2.0",
+    "eslint-plugin-flowtype": "^2.42.0",
+    "eslint-plugin-flowtype-errors": "^3.3.7",
     "eslint-plugin-import": "^2",
     "eslint-plugin-jsx-a11y": "^5",
-    "eslint-plugin-react": "^7"
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-react": "^7",
+    "flow-bin": "^0.64.0",
+    "prettier-eslint": "^8.8.1"
   }
 }
