--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,7 @@
   },
   "rules": {
     "arrow-parens": ["off"],
-    "compat/compat": "error",
+    "compat/compat": "off",
     "consistent-return": "off",
     "comma-dangle": "off",
     "flowtype-errors/show-errors": "error",
@@ -22,7 +22,7 @@
     "no-use-before-define": "off",
     "no-multi-assign": "off",
     "promise/param-names": "error",
-    "promise/always-return": "error",
+    "promise/always-return": "off",
     "promise/catch-or-return": "error",
     "promise/no-native": "off",
     "react/sort-comp": ["error", {
