--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
   "productName": "reacthome-electron",
   "version": "1.0.0",
   "description": "Reacthome electron boilerplate",
-  "main": "src/index.js",
+  "main": "main.js",
   "scripts": {
-    "start": "electron-forge start",
-    "package": "electron-forge package",
-    "make": "electron-forge make",
-    "publish": "electron-forge publish",
-    "lint": "eslint --cache --color --ext .jsx,.js src"
+    "start": "NODE_ENV=DEV concurrently \"babel-node server.js\" \"sleep 2 && electron .\"",
+    "bundle": "webpack",
+    "watch": "NODE_ENV=DEV babel-node server.js",
+    "start:prod": "webpack && electron ."
   },
   "keywords": [],
   "author": {
@@ -18,83 +17,43 @@
     "url": "https://github.com/gev"
   },
   "license": "",
-  "config": {
-    "forge": {
-      "make_targets": {
-        "win32": [
-          "squirrel"
-        ],
-        "darwin": [
-          "zip"
-        ],
-        "linux": [
-          "deb"
-        ]
-      },
-      "electronPackagerConfig": {
-        "packageManager": "yarn"
-      },
-      "electronWinstallerConfig": {
-        "name": "reacthome_electron"
-      },
-      "electronInstallerDebian": {
-        "icon": "assets/icon.png",
-        "categories": [
-          "Utility"
-        ],
-        "homepage": "http://reacthome.net"
-      },
-      "electronInstallerRedhat": {},
-      "github_repository": {
-        "owner": "",
-        "name": ""
-      },
-      "windowsStoreConfig": {
-        "packageName": "",
-        "name": "reacthomeelectron"
-      }
-    }
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.1",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-react-hmre": "^1.1.1",
+    "concurrently": "^3.5.1",
+    "electron": "^1.8.2",
+    "eslint": "^4.17.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-flowtype": "^2.44.0",
+    "eslint-plugin-flowtype-errors": "^3.3.7",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.6.1",
+    "express": "^4.16.2",
+    "flow-bin": "^0.65.0",
+    "prettier-eslint": "^8.8.1",
+    "webpack": "^3.11.0",
+    "webpack-dev-middleware": "^2.0.5",
+    "webpack-hot-middleware": "^2.21.0"
   },
   "dependencies": {
-    "electron-compile": "^6.4.2",
-    "electron-devtools-installer": "^2.1.0",
-    "electron-squirrel-startup": "^1.0.0",
     "history": "^4.7.2",
-    "material-ui": "^1.0.0-beta.31",
+    "material-ui": "^1.0.0-beta.33",
     "material-ui-icons": "^1.0.0-beta.17",
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1",
-    "react-hot-loader": "^3.0.0-beta.6",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
     "redux": "^3.7.2",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0",
-    "ubuntu-fontface": "^0.1.13"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-eslint": "^8.2.1",
-    "babel-plugin-transform-async-to-generator": "^6.24.1",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-flow": "^6.23.0",
-    "babel-preset-react": "^6.24.1",
-    "electron-forge": "^5.1.0",
-    "electron-prebuilt-compile": "1.7.11",
-    "eslint": "^4.16.0",
-    "eslint-config-airbnb": "^15",
-    "eslint-plugin-compat": "^2.2.0",
-    "eslint-plugin-flowtype": "^2.42.0",
-    "eslint-plugin-flowtype-errors": "^3.3.7",
-    "eslint-plugin-import": "^2",
-    "eslint-plugin-jsx-a11y": "^5",
-    "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-react": "^7",
-    "flow-bin": "^0.64.0",
-    "prettier-eslint": "^8.8.1"
+    "redux-thunk": "^2.2.0"
   }
 }
