--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "reacthome-devices",
-  "productName": "reacthome-devices",
+  "name": "reacthome-electron",
+  "productName": "reacthome-electron",
   "version": "1.0.0",
   "description": "Reacthome electron boilerplate",
   "main": "main.js",
