--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-hmre": "^1.1.1",
     "concurrently": "^3.5.1",
+    "css-loader": "^0.28.11",
     "electron": "^2.0.0-beta.7",
     "eslint": "^4.17.0",
     "eslint-config-airbnb": "^16.1.0",
@@ -39,6 +40,8 @@
     "express": "^4.16.2",
     "flow-bin": "^0.65.0",
     "prettier-eslint": "^8.8.1",
+    "style-loader": "^0.21.0",
+    "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "^3.11.0",
     "webpack-dev-middleware": "^2.0.5",
     "webpack-hot-middleware": "^2.21.0"
