--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.6.1",
     "express": "^4.16.2",
+    "file-loader": "^1.1.11",
     "flow-bin": "^0.65.0",
     "prettier-eslint": "^8.8.1",
     "style-loader": "^0.21.0",
@@ -51,6 +52,7 @@
     "fast-deep-equal": "gev/fast-deep-equal",
     "history": "^4.7.2",
     "ip": "gev/ip",
+    "material-design-icons": "^3.0.1",
     "react": "^16.2.0",
     "react-chartjs-2": "^2.7.0",
     "react-dom": "^16.2.0",
