--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "fast-deep-equal": "gev/fast-deep-equal",
     "history": "^4.7.2",
     "ip": "gev/ip",
+    "node-fetch": "^2.1.2",
     "react": "^16.2.0",
     "react-chartjs-2": "^2.7.0",
     "react-dom": "^16.2.0",
