--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   },
   "dependencies": {
     "chart.js": "^2.7.2",
+    "debounce": "^1.1.0",
     "fast-deep-equal": "gev/fast-deep-equal",
     "history": "^4.7.2",
     "ip": "gev/ip",
@@ -59,13 +60,14 @@
     "react-chartjs-2": "^2.7.0",
     "react-dom": "^16.2.0",
     "react-dropzone": "^4.2.9",
+    "react-palette": "^0.1.3",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "rmwc": "1.3.0",
+    "rmwc": "^1.6.3",
     "uuid": "^3.2.1"
   }
 }
