--- a/package.json
+++ b/package.json
@@ -56,7 +56,9 @@
     "koa": "^2.5.1",
     "koa-mount": "^4.0.0",
     "koa-static": "^4.0.2",
+    "mkdirp": "^0.5.1",
     "node-fetch": "^2.1.2",
+    "node-vibrant": "^3.0.0",
     "react": "^16.2.0",
     "react-chartjs-2": "^2.7.0",
     "react-dom": "^16.2.0",
@@ -66,8 +68,10 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
+    "reacthome-ircodes": "gev/reacthome-ircodes",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
+    "rimraf": "^2.6.2",
     "rmwc": "^2.2.3",
     "uuid": "^3.2.1"
   }
