--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-chartjs-2": "^2.7.0",
     "react-dom": "^16.2.0",
     "react-dropzone": "^4.2.9",
+    "react-google-maps": "^9.4.5",
     "react-palette": "^0.1.3",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
