--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "scripts": {
     "start": "NODE_ENV=DEV concurrently \"babel-node server.js\" \"sleep 2 && electron .\"",
     "bundle": "webpack",
+    "build": "node build.js",
+    "dist": "npm run bundle && npm run build",
     "watch": "NODE_ENV=DEV babel-node server.js",
     "start:prod": "webpack && electron ."
   },
@@ -50,6 +52,7 @@
   "dependencies": {
     "chart.js": "^2.7.2",
     "debounce": "^1.1.0",
+    "electron-packager": "^13.1.1",
     "fast-deep-equal": "gev/fast-deep-equal",
     "history": "^4.7.2",
     "ip": "gev/ip",
