--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-hmre": "^1.1.1",
     "concurrently": "^3.5.1",
     "css-loader": "^0.28.11",
-    "electron": "^6.0.10",
+    "electron": "^6.0.11",
+    "electron-rebuild": "^1.8.6",
     "eslint": "^4.17.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-flowtype": "^2.44.0",
@@ -52,7 +52,7 @@
   "dependencies": {
     "chart.js": "^2.7.2",
     "debounce": "^1.1.0",
-    "electron-packager": "^13.1.1",
+    "electron-packager": "^14.0.6",
     "fast-deep-equal": "gev/fast-deep-equal",
     "history": "^4.7.2",
     "ip": "gev/ip",
