--- a/package.json
+++ b/package.json
@@ -77,6 +77,8 @@
     "redux-thunk": "^2.2.0",
     "rimraf": "^2.6.2",
     "rmwc": "^2.2.3",
-    "uuid": "^3.2.1"
+    "uuid": "^3.2.1",
+    "xterm": "^4.7.0",
+    "xterm-addon-fit": "^0.4.0"
   }
 }
