--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "reacthome-studio",
-  "productName": "reacthome-studio",
+  "name": "hommyn-studio",
+  "productName": "hommyn-studio",
   "version": "1.0.0",
   "description": "Hommyn Studio",
   "main": "main.js",
