--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "reacthome-ircodes": "gev/reacthome-ircodes",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
+    "reselect": "^4.1.5",
     "rimraf": "^2.6.2",
     "rmwc": "^2.2.3",
     "uuid": "^3.2.1",
