--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "chart.js": "^2.7.2",
     "debounce": "^1.1.0",
     "electron-packager": "^14.0.6",
-    "fast-deep-equal": "gev/fast-deep-equal",
+    "fast-deep-equal": "github:gev/fast-deep-equal",
     "history": "^4.7.2",
     "ip": "gev/ip",
     "koa": "^2.5.1",
@@ -73,7 +73,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
-    "reacthome-ircodes": "gev/reacthome-ircodes",
+    "reacthome-ircodes": "github:gev/reacthome-ircodes",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "reselect": "^4.1.5",
