--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
+    "react-svg": "^3.0.2",
     "reacthome-ircodes": "github:gev/reacthome-ircodes",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
