--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "reselect": "^4.1.5",
     "rimraf": "^2.6.2",
     "rmwc": "^2.2.3",
+    "run": "^1.5.0",
     "uuid": "^3.2.1",
     "xterm": "^4.7.0",
     "xterm-addon-fit": "^0.4.0"
