--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "babel-preset-react-hmre": "^1.1.1",
     "concurrently": "^3.5.1",
     "css-loader": "^0.28.11",
-    "electron": "^18.3.7",
     "eslint": "^4.17.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-flowtype": "^2.44.0",
@@ -50,9 +49,11 @@
     "webpack-hot-middleware": "^2.21.0"
   },
   "dependencies": {
+    "@electron/remote": "^2.1.2",
     "chart.js": "^2.7.2",
     "debounce": "^1.1.0",
-    "electron-packager": "^13.1.1",
+    "electron": "^31.3.1",
+    "electron-packager": "^17.1.2",
     "fast-deep-equal": "gev/fast-deep-equal",
     "history": "^4.7.2",
     "ip": "gev/ip",
