--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
     "babel-preset-react-hmre": "^1.1.1",
     "concurrently": "^3.5.1",
     "css-loader": "^0.28.11",
-    "electron": "^7.0.0",
-    "electron-notarize": "^1.0.0",
-    "electron-rebuild": "^1.8.6",
+    "electron": "^31.3.1",
+    "electron-notarize": "^1.2.2",
+    "electron-packager": "^17.1.2",
+    "electron-rebuild": "^3.2.9",
     "eslint": "^4.17.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-flowtype": "^2.44.0",
@@ -51,9 +52,9 @@
     "webpack-hot-middleware": "^2.21.0"
   },
   "dependencies": {
+    "@electron/remote": "^2.1.2",
     "chart.js": "^2.7.2",
     "debounce": "^1.1.0",
-    "electron-packager": "^14.0.6",
     "fast-deep-equal": "github:gev/fast-deep-equal",
     "history": "^4.7.2",
     "ip": "gev/ip",
