--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@electron/remote": "^2.1.2",
     "chart.js": "^2.7.2",
     "debounce": "^1.1.0",
+    "electron-remote": "^1.3.0",
     "fast-deep-equal": "github:gev/fast-deep-equal",
     "history": "^4.7.2",
     "ip": "gev/ip",
